@@ -5,5 +5,6 @@
     <dependency org="org.jruby" name="jruby-complete" rev="1.3.1" transitive="false"/>
     <dependency org="org.picocontainer" name="picocontainer" rev="2.8"/>
     <dependency org="junit" name="junit" rev="4.5"/>
+    <dependency org="org.codehaus.groovy" name="groovy-all" rev="1.6.3"/>
   </dependencies>
 </ivy-module>
