@@ -1,0 +1,14 @@
+<ivysettings>
+  <settings defaultResolver="all-repos" />
+  <resolvers>
+    <chain name="all-repos">
+      <url name="cukes" m2compatible="true">
+        <artifact pattern="http://cukes.info/maven/[organisation]/[module]/[revision]/[artifact]-[revision].[ext]" />
+      </url>
+      <url name="codehaus" m2compatible="true">
+        <artifact pattern="http://repository.codehaus.org/[organisation]/[module]/[revision]/[artifact]-[revision].[ext]" />
+      </url>
+      <ibiblio name="ibiblio" m2compatible="true" usepoms="false" />
+    </chain>
+  </resolvers>
+</ivysettings>
