@@ -1,0 +1,11 @@
+package calc;
+
+public class Calculator {
+    public void push(double arg) {
+        
+    }
+    
+    public double divide() {
+        return 1.5;
+    }
+}
